refactor: expand non-null normalization across domain and web services